<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:textSize="32sp"
        android:gravity="right"
        android:background="@android:color/darker_gray"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="6"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btnMC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_mc"
            android:layout_margin="3dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnMR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_mr"
            android:layout_margin="3dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnMS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_ms"
            android:layout_margin="3dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnMPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_mplus"
            android:layout_margin="3dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnMMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_mminus"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_del"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnCE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_ce"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_clear"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_sign"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnSquareRoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_sqrt"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_7"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_8"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_9"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_divide"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnPercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_percentage"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_4"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_5"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_6"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_multiply"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnSquare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_square"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_1"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_2"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_3"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_minus"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnReciprocal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_reciprocal"
            android:layout_margin="3dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:text="@string/btn_0"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_decimal"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_plus"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/btn_equals"
            android:layout_margin="4dp"
            android:background="@drawable/rect_button"/>

    </GridLayout>

</LinearLayout>
